[package]
name = "async-bincode-futures"
version = "0.5.1"
edition = "2018"

description = "Asynchronous access to a bincode-encoded item stream."
readme = "README.md"

authors = [
	"Jon Gjengset <jon@thesquareplanet.com>",
	"Jonathan Behrens <behrensj@mit.edu>"
]

homepage = "https://github.com/jonhoo/async-bincode"
repository = "https://github.com/jonhoo/async-bincode.git"

keywords = ["asynchronous", "tokio", "bincode", "serialization"]
categories = ["asynchronous", "encoding", "network-programming"]

license = "MIT/Apache-2.0"

[dependencies]
bincode = "1"
byteorder = "1"
futures-core = "0.3"
futures-sink = "0.3"
serde = "1"
bytes = "0.5"
futures = "0.3"